Trying to add semantic HTML support using Compass Bootstrap.

--- a/app/styles/_compass_twitter_bootstrap_awesome.scss
+++ b/app/styles/_compass_twitter_bootstrap_awesome.scss
@@ -18,6 +18,9 @@
 // Core variables and mixins
 @import "compass_twitter_bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
 
+// Override hook
+@import"overrides/variables";
+
 
 // Grid system and page structure
 @import "compass_twitter_bootstrap/scaffolding";
