--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,1 +1,5 @@
-@import "compass_twitter_bootstrap";
+@import "compass_twitter_bootstrap_awesome";
+
+@import "libs/libs";
+
+@import "components/components";
