Trying to add support for font awesome. Not successful.

--- a/app/styles/_compass_twitter_bootstrap_awesome.scss
+++ b/app/styles/_compass_twitter_bootstrap_awesome.scss
@@ -18,9 +18,11 @@
 // Core variables and mixins
 @import "compass_twitter_bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
 
-// Override hook
-@import"overrides/variables";
+// Bootswatch theme
+@import "libs/themes/spacelab/variables";
 
+// Override hook
+@import "libs/overrides";
 
 // Grid system and page structure
 @import "compass_twitter_bootstrap/scaffolding";
