Re shuffled import order.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,8 @@
 @import "compass_twitter_bootstrap_awesome";
+@import "compass_twitter_bootstrap_responsive";
 
 @import "libs/libs";
+
+@import "libs/themes/spacelab/bootswatch";
 
 @import "components/components";
