Abandoning as semantic HTML with compass makeColumn() mixins is just not working. :(

--- a/app/styles/_compass_twitter_bootstrap_awesome.scss
+++ b/app/styles/_compass_twitter_bootstrap_awesome.scss
@@ -16,7 +16,7 @@
 @import "compass_twitter_bootstrap/reset";
 
 // Core variables and mixins
-@import "compass_twitter_bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
+// @import "compass_twitter_bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
 
 // Bootswatch theme
 @import "libs/themes/spacelab/variables";
